--- a/src/css/lookLikeATable.css
+++ b/src/css/lookLikeATable.css
@@ -6,6 +6,7 @@
 .rowParent:hover {
     height: 70px;
     border: 1px solid;
+    background-color: rgb(0, 218, 218);
 }
 .rowParentTH {
     display: flex; /* Comment: Displays the container as a flex container */
@@ -38,7 +39,7 @@
     display: flex;
 }
 .rowselected{
-    background-color: aqua;
+    background-color: rgb(0, 173, 173);
 }
 @media (min-width: 768px) {
     .desktop-only {
@@ -60,6 +61,10 @@
     .data{
         width: 50%;
         justify-content: left;
+    }
+    .dataComboBox{
+        width: 30%;
+    word-wrap: anywhere;
     }
     .rowParent {
         margin-top: 2%;
