--- a/src/css/lookLikeATable.css
+++ b/src/css/lookLikeATable.css
@@ -1,16 +1,14 @@
 
 .rowParent {
     display: flex; /* Comment: Displays the container as a flex container */
-    justify-content: space-between; 
+    /* justify-content: space-between;  */
 }
 .rowParent:hover {
-    height: 70px;
-    border: 1px solid;
     background-color: rgb(0, 218, 218);
 }
 .rowParentTH {
     display: flex; /* Comment: Displays the container as a flex container */
-    justify-content: space-between; 
+    /* justify-content: space-between;  */
     margin-bottom: 1%;
     border-bottom: 1px solid;
 }
@@ -18,13 +16,13 @@
     background-color: rgb(255, 255, 255);
 }
 .rowEven{
-    background-color: rgb(170, 170, 170);
+    background-color: rgb(230, 230, 230);
 }
 .rowOdd2{
     background-color: rgb(255, 255, 255);
 }
 .rowEven2{
-    background-color: rgb(170, 170, 170);
+    background-color: rgb(230, 230, 230);
 }
 .desktop-only {
     display: none; 
@@ -33,24 +31,52 @@
     display: none; 
 }
 .hideExtra{
-    display: none;
+    display: none !important;
 }
 .showExtra{
     display: flex;
 }
+.showAllExtra{
+    margin-bottom: 3px;
+    z-index: 100;
+    position: absolute;
+}
 .rowselected{
     background-color: rgb(0, 173, 173);
+}
+.canClick {
+    cursor: pointer;
+}
+.bigExpandCollapse{
+    display: none;
+}
+.smallExpandCollapse{
+    display: none;
+}
+@media (max-width: 1149px){
+    .smallExpandCollapse{
+        display: flex;
+        width: 26px;
+    }
+}
+@media (min-width: 1150px){
+.bigExpandCollapse{
+    display: flex;
+    width: 80px;
+    margin-bottom: 3px;
+}
 }
 @media (min-width: 768px) {
     .desktop-only {
         display: block; 
     }
     .data{
-        width: 14.3%;
+        width: 25%;
         justify-content: left;
+        text-align: center;
     }
-    .rowParent {
-        cursor: pointer;
+    .subData{
+        padding: 3px 10px;
     }
 }
 
@@ -59,14 +85,33 @@
         display: block; 
     }
     .data{
-        width: 50%;
+        width: 33%;
         justify-content: left;
+        text-align: center;
+        padding: 3px 10px;
     }
     .dataComboBox{
-        width: 30%;
+        width: 33%;
     word-wrap: anywhere;
+    text-align: center;
     }
     .rowParent {
         margin-top: 2%;
+    }
+}
+@media (max-width: 445px){
+    .changeNumBig{
+        display: none;
+    }
+    .changeNumSmall{
+        display: initial;
+    }
+}
+@media (min-width: 446px){
+    .changeNumBig{
+        display: initial;
+    }
+    .changeNumSmall{
+        display: none;
     }
 }
