--- a/src/css/lookLikeATable.css
+++ b/src/css/lookLikeATable.css
@@ -80,6 +80,12 @@ a{
         text-align: center;
         padding: 2px 10px
     }
+    .data2{
+        width: 48%;
+        justify-content: left;
+        text-align: center;
+        padding: 2px 10px
+    }
     .subData{
         padding: 3px 10px;
     }
@@ -90,6 +96,12 @@ a{
         display: block; 
     }
     .data{
+        width: 33%;
+        justify-content: left;
+        text-align: center;
+        padding: 3px 10px;
+    }
+    .data2{
         width: 33%;
         justify-content: left;
         text-align: center;
