--- a/src/css/personalPage.css
+++ b/src/css/personalPage.css
@@ -9,13 +9,16 @@
     float: right;
     width: 50%;
     height: 95%;
-    display: flex;
-    background-color: #b3b3b3;;
+    background-color: #b3b3b3;
 }
 img{
     width: 300px;
 }
-
+@media (min-width: 768px) {
+  .rightSide{
+    display: flex;
+}
+}
 /* CSS */
 .button-29 {
   align-items: center;
