--- a/src/css/pieChart.css
+++ b/src/css/pieChart.css
@@ -62,6 +62,8 @@
     flex-grow: 1;
     text-align: right;
     display: flex;
+    float: left;
+     width: 20%;
   }
   .status::before {
     content:'';
@@ -71,3 +73,46 @@
     display: inline-block;
     margin-top: 1em;
   }
+  .storyName {
+    float: left;
+     width: 40%;
+    flex-grow: 1;
+    text-align: left;
+    display: flex;
+  }
+  .storyName::after {
+    content:'';
+    background: repeating-linear-gradient(to left, currentColor, currentColor 1px, transparent 2px, transparent 4px);
+    height: 1px;
+    flex-grow: 1;
+    display: inline-block;
+    margin-top: 1em;
+  }
+  .topStuff{
+  float: right;
+  }
+
+  @media (min-width: 768px) {
+    .tabelOfContents{
+        text-align: center;
+        width: 97%;
+        height: 30px;
+        display: flex;
+        justify-content: center;
+        padding-top: 9px;
+      }
+      .topStuff{
+        padding: 0 10px;
+        }
+}
+
+@media (max-width: 767px) {
+    .tabelOfContents{
+        text-align: center;
+        width: 97%;
+        height: 30px;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 9px;
+      }
+}
